Write generic code

--- a/Sprites02_64_slice/Game/App.config
+++ b/Sprites02_64_slice/Game/App.config
@@ -2,6 +2,8 @@
 <configuration>
 	<appSettings>
 		<add key="Save" value="true" />
+		<add key="Type" value="Player" />
+		<!--<add key="Type" value="Monster" />-->
 		<add key="Left" value="8" />
 	</appSettings>
 </configuration>
