--- a/Sprites03_48_join/Game/App.config
+++ b/Sprites03_48_join/Game/App.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="Save" value="true" />
-		<add key="Type" value="Player" />
-		<!--<add key="Type" value="Monster" />-->
-		<add key="Left" value="8" />
+		<add key="Save" value="false" />
+		<add key="Entity" value="Player" />
+		<add key="Action" value="Run" />
 	</appSettings>
 </configuration>
