--- a/Sprites04_24_half/Game/App.config
+++ b/Sprites04_24_half/Game/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="Save" value="false" />
+		<add key="Save" value="true" />
 		<add key="Entity" value="Player" />
-		<add key="Action" value="Run" />
+		<add key="Action" value="Idle" />
 	</appSettings>
 </configuration>
