--- a/Sprites03_48_join/Game/App.config
+++ b/Sprites03_48_join/Game/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="Save" value="false" />
+		<add key="Save" value="true" />
 		<add key="Entity" value="Player" />
 		<add key="Action" value="Run" />
 	</appSettings>
