--- a/Sprites05_48_slice/Game/App.config
+++ b/Sprites05_48_slice/Game/App.config
@@ -2,8 +2,8 @@
 <configuration>
 	<appSettings>
 		<add key="Save" value="true" />
-		<add key="Type" value="Player" />
-		<!--<add key="Type" value="Monster" />-->
-		<add key="Left" value="8" />
+		<add key="ActorType" value="Player" />
+		<add key="VerbType" value="Run" />
+		<add key="FaceType" value="Left" />
 	</appSettings>
 </configuration>
