--- a/TitleArrange/Game/App.config
+++ b/TitleArrange/Game/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="Save" value="true" />
+		<add key="Save" value="false" />
 	</appSettings>
 </configuration>
