--- a/Tiles04_music/dev/Game.vcxproj
+++ b/Tiles04_music/dev/Game.vcxproj
@@ -144,10 +144,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="banks\bank6.c" />
+    <ClCompile Include="banks\bank7.c" />
     <ClCompile Include="gfx.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="banks\bank6.h" />
+    <ClInclude Include="banks\bank7.h" />
     <ClInclude Include="gfx.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
