--- a/Tiles04_music/dev/Game.vcxproj.filters
+++ b/Tiles04_music/dev/Game.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="gfx.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="banks\bank7.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="banks\bank6.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="gfx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="banks\bank7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="banks\bank6.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
